--- a/index.html
+++ b/index.html
@@ -4,38 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portfólio Web</title>
-    <style>
-        body {
-            background-color: aliceblue;
-            font-family: Helvetica, sans-serif;
-            padding: 0 0 0 40px;
-        }
-        
-        a {
-           text-decoration: underline; 
-           color: blue;
-        }
-
-        h3 {
-            padding: 20px 0 0 0;
-        }
-
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Guilherme Souza Goiana</h1>
-    <img src="Profile.jpeg" alt="Foto minha usando camisa preta" width="200px">
-    <p>Brasileiro, resido atualmente em Salvador/BA, local onde nasci.</p>
-    <p>Apaixonado por Tecnologia, sempre busco transformar desafios em possibilidades de fazer a diferença.</p>
-    <h3 id="links">Meus links:</h3>
+    <header>
+        <h1>Guilherme Souza Goiana</h1>
+        <img src="Profile.jpeg" alt="Foto minha usando camisa preta">
+        <p>Brasileiro, resido atualmente em Salvador/BA, local onde nasci.</p>
+        <p>Apaixonado por Tecnologia, sempre busco transformar desafios em possibilidades de fazer a diferença.</p>
+    </header>
+    
+    <h3 class="links">Meus links:</h3>
     <p><a href="https://www.linkedin.com/in/guilhermegoiana/" target="_blank" rel="noopener noreferrer">Linkedin</a></p>
     <p><a href="https://github.com/guilhermegoiana" target="_blank" rel="noopener noreferrer">Github</a></p>
-    <h3>Habilidades que mais me orgulho:</h3>
-    <ul>
-        <li>Resiliência</li>
-        <li>Comprometimento</li>
-        <li>Estudioso</li>
-    </ul>
+    <div class="habilidades">
+        <h3>Habilidades que mais me orgulho:</h3>
+        <ul>
+            <li>Resiliência</li>
+            <li>Comprometimento</li>
+            <li>Estudioso</li>
+        </ul>
+    </div>
 </body>
 </html>
