Ajustando padding total

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <p>Apaixonado por Tecnologia, sempre busco transformar desafios em possibilidades de fazer a diferença.</p>
     </header>
     
-    <h3 class="links">Meus links:</h3>
-    <p><a href="https://www.linkedin.com/in/guilhermegoiana/" target="_blank" rel="noopener noreferrer">Linkedin</a></p>
-    <p><a href="https://github.com/guilhermegoiana" target="_blank" rel="noopener noreferrer">Github</a></p>
+    <div class="links">
+        <h3>Meus links:</h3>
+        <p><a href="https://www.linkedin.com/in/guilhermegoiana/" target="_blank" rel="noopener noreferrer">Linkedin</a></p>
+        <p><a href="https://github.com/guilhermegoiana" target="_blank" rel="noopener noreferrer">Github</a></p>
+    </div>
     <div class="habilidades">
         <h3>Habilidades que mais me orgulho:</h3>
         <ul>
