Radicalizando no Portfolio

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Guilherme Souza Goiana</h1>
-        <img src="Profile.jpeg" alt="Foto minha usando camisa preta">
-        <p>Brasileiro, resido atualmente em Salvador/BA, local onde nasci.</p>
+        <div class="nome">
+            <h1>Guilherme Souza Goiana</h1>
+        </div>
+        <div class="imagemperfil">
+            <img src="Profile.jpeg" alt="Foto minha usando camisa preta">
+        </div>
+        <div class="descricao1">
+            <p>Salvador/BA - Brasil.</p>
+        </div>
+        <div class="descricao2">    
+            <h3>Descrição:</h3>
         <p>Apaixonado por Tecnologia, sempre busco transformar desafios em possibilidades de fazer a diferença.</p>
+        </div>
     </header>
     
     <div class="links">
