--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <ul>
             <li>Resiliência</li>
             <li>Comprometimento</li>
-            <li>Estudioso</li>
+            <li>Dedicado</li>
+            <li>Adaptável</li>
         </ul>
     </div>
 </body>
