adicionando projetos ao portfolio

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <h3>Meus links:</h3>
         <p><a href="https://www.linkedin.com/in/guilhermegoiana/" target="_blank" rel="noopener noreferrer">Linkedin</a></p>
         <p><a href="https://github.com/guilhermegoiana" target="_blank" rel="noopener noreferrer">Github</a></p>
+        <p><a href="https://guilhermegoiana.github.io/projetos/colorguess/">Projeto Color Guess</a></p>
+        <p><a href="http://guilhermegoiana.github.io/projetos/todolist">Projeto To Do List</a></p>
+        <p><a href="http://guilhermegoiana.github.io/projetos/pixelsart">Projeto Pixels Art</a></p>
     </div>
 </body>
 </html>
