Adicionando projeto tech gallery

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <p>Apaixonado por Tecnologia, sempre busco transformar desafios em possibilidades de fazer a diferença.</p>
         </div>
     </header>
+    <section class="flex-container">
     <div class="habilidades">
         <h3>Habilidades que mais me orgulho:</h3>
         <ul>
@@ -38,6 +39,8 @@
         <p><a href="https://guilhermegoiana.github.io/projetos/colorguess/">Projeto Color Guess</a></p>
         <p><a href="http://guilhermegoiana.github.io/projetos/todolist">Projeto To Do List</a></p>
         <p><a href="http://guilhermegoiana.github.io/projetos/pixelsart">Projeto Pixels Art</a></p>
+        <p><a href="http://guilhermegoiana.github.io/projetos/trybe-tech-gallery">Trybe Tech Gallery</a></p>
     </div>
+  </section>
 </body>
 </html>
