--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <p><a href="http://guilhermegoiana.github.io/projetos/todolist">Projeto To Do List</a></p>
         <p><a href="http://guilhermegoiana.github.io/projetos/pixelsart">Projeto Pixels Art</a></p>
         <p><a href="http://guilhermegoiana.github.io/projetos/trybe-tech-gallery">Trybe Tech Gallery</a></p>
+        <p><a href="http://guilhermegoiana.github.io/projetos/trybewarts">Trybewarts</a></p>
     </div>
   </section>
 </body>
