--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <p><a href="http://guilhermegoiana.github.io/projetos/pixelsart">Projeto Pixels Art</a></p>
         <p><a href="http://guilhermegoiana.github.io/projetos/trybe-tech-gallery">Trybe Tech Gallery</a></p>
         <p><a href="http://guilhermegoiana.github.io/projetos/trybewarts">Trybewarts</a></p>
+        <p><a href="http://guilhermegoiana.surge.sh/">iChoveu</a></p>
     </div>
   </section>
 </body>
